--- a/explore.Rmd
+++ b/explore.Rmd
@@ -14,15 +14,251 @@ Tabular data is tidy if each value is placed in its own "cell", each variable in
 Variation is the tendency of the values of a variable to change from measurement to measurement.
 Categorical variables can only take one of a small set of values. (saved as factors, or character vectors) Use a Bar chart!
 
+Continuous variables can take any of an infinite set of ordered values.
+
 ```{r}
 library(tidyverse)
 ggplot(data = diamonds) +
   geom_bar(mapping = aes(x = cut))
 
+diamonds %>% count(cut)
+ggplot(data =diamonds) + geom_histogram(mapping = aes(x = carat), binwidth = 0.5)
+diamonds %>% count(cut_width(carat, 0.5))
+smaller <- diamonds %>% filter(carat < 3)
+ggplot(data =smaller, mapping =aes(x = carat))+ geom_histogram(binwidth = 0.1)
+
+ggplot(data = smaller, mapping = aes(x = carat, colour =cut))+
+  geom_freqpoly(binwidth = 0.1)
+
+ggplot(data = smaller, mapping = aes(x=carat)) +
+  geom_histogram(binwidth = 0.01)
+ggplot(data = faithful, mapping = aes(x=eruptions))+ geom_histogram(binwidth = 0.25)
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
+Sometimes you need to change the 'zoom' of a graph to see outliers or under-represented data.
+coord_cartesian can zoom into the xlim or ylim. ggplot2 also has xlim() ylim(), they throw away stuff outside the limits
+```{r}
+ggplot(diamonds)+
+  geom_histogram(mapping = aes(x = y), binwidth = 0.5)
+ggplot(diamonds)+
+  geom_histogram(mapping = aes(x=y), binwidth = 0.5)+
+  coord_cartesian(ylim = c(0,50))
+unusual <- diamonds %>%
+  filter(y<3| y>20) %>%
+  select(price, x, y, z) %>%
+  arrange(y)
+unusual
+```
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+7.3.4 Exercises
+1.
+```{r}
+ggplot(data = diamonds)+
+  geom_point(mapping = aes(x=x, y=carat), color ="red")+
+  geom_point(mapping = aes(x=y, y=carat), color ="blue")+
+  geom_point(mapping = aes(x=z, y=carat), color ="black")
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+ggplot(data = diamonds)+
+  geom_freqpoly(mapping = aes(x=price, color = cut), binwidth=0.1)
+ggplot(data = diamonds)+
+  geom_freqpoly(mapping = aes(x=price, color = cut), binwidth=0.5)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=0.9)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=1)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=5)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=10)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=100)
+```
+```{r}
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=1000)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=1000)+
+  xlim(0,10000)
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=1000)+
+  coord_cartesian(xlim = c(0,1000))
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=30)+
+  coord_cartesian(xlim = c(0,1000))
+ggplot(data = diamonds)+
+  geom_histogram(mapping = aes(x=price, color = cut), binwidth=500)+
+  coord_cartesian(xlim = c(600,1000))
+```
+Makes uneven graphs, 23 vs 1558
+```{r}
+diamonds %>% filter(carat == 1 | carat == 0.99) -> edges_carat
+edges_carat %>% filter(carat ==1) %>% count()
+edges_carat %>% filter(carat == 0.99) %>% count()
+ggplot(data = edges_carat) +
+  geom_histogram(mapping = aes(x=carat), binwidth = .01)
+
+```
+
+CONT
+```{r}
+#Gets rid of unusual values...not a good method
+diamonds2 <- diamonds %>%
+  filter(between(y, 3, 20))
+#Replace with missing values...better
+#I honestly have no clue how this is working
+diamonds3 <- diamonds %>%
+  mutate(y=ifelse(y < 3 | y > 20, NA, y))
+ggplot(data = diamonds3, mapping = aes(x=x, y=y))+
+  geom_point()
+```
+ifelse() can be used to replace values with NA
+
+```{r}
+nycflights13::flights %>%
+  mutate(
+    cancelled = is.na(dep_time),
+    sched_hour = sched_dep_time %/% 100,
+    sched_min = sched_dep_time %% 100,
+    sched_dep_time = sched_hour + sched_min /60) %>%
+  ggplot(mapping = aes(sched_dep_time))+
+    geom_freqpoly(mapping = aes(color = cancelled), binwidth = 1/4)
+```
+Exercises 7.4.1
+1. In a histogram they leave a gap. In a bar graph it ignores NA.
+2. na.rm = TRUE prevents sum() from returning NA if there are any NA values. In Mean()it will by default return NA if there is an NA value. by setting true it calculates based on the non-NA values.
+
+Covariation is the tendency for variables to variation together in a related way.
+
+```{r}
+ggplot(data = diamonds, mapping =aes(x=price))+
+  geom_freqpoly(mapping = aes(color =cut), binwidth = 500)
+ggplot(diamonds)+
+  geom_bar(mapping = aes(x=cut))
+```
+```{r}
+ggplot(data=diamonds, mapping =aes(x = price, y=..density..))+
+  geom_freqpoly(mapping = aes(color = cut), binwidth = 500)
+ggplot(data = diamonds, mapping = aes(x=cut, y =price))+
+  geom_boxplot()
+```
+
+```{r}
+ggplot(data = mpg, mapping = aes(x = class, y = hwy))+
+  geom_boxplot()
+ggplot(data = mpg)+
+  geom_boxplot(mapping = aes(x=reorder(class, hwy, FUN = median), y=hwy))
+ggplot(data = mpg)+
+  geom_boxplot(mapping = aes(x = reorder(class, hwy, FUN = median), y=hwy)) +
+  coord_flip()
+```
+
+```{r}
+flights2 <- 
+  nycflights13::flights %>%
+  mutate(
+    cancelled = is.na(dep_time),
+    sched_hour = sched_dep_time %/% 100,
+    sched_min = sched_dep_time %% 100,
+    sched_dep_time = sched_hour + sched_min / 60
+  )
+
+flights2 %>%
+  ggplot(aes(x =cancelled, y = sched_dep_time)) +
+  geom_boxplot()
+```
+
+2.
+
+```{r}
+diamonds %>%
+  ggplot(aes(x= cut, y =carat)) +
+  geom_boxplot()
+
+diamonds %>%
+  ggplot(aes(x = carat, colour = cut)) +
+  geom_density()
+```
+
+The carat of the dimond matters more than the cut, but both look like they may have some impact.
+
+3.
+
+
+```{r}
+library(ggstance)
+diamonds %>%
+  ggplot(aes(x=cut, y=carat)) + geom_boxplot() +
+  coord_flip()
+diamonds %>%
+  ggplot(aes(x=carat, y=cut)) + geom_boxploth()
+```
+
+They look the same.
+
+
+
+```{r}
+library(lvplot)
+graphing <- ggplot(diamonds, aes(x=cut, y=price))
+graphing + geom_lv()
+graphing <- ggplot(diamonds, aes(x=cut, y=carat))
+graphing + geom_lv()
+
+```
+
+Not quite sure what to make of this plot...
+
+
+5.
+```{r}
+diamonds %>%
+  ggplot(aes(cut, price)) +
+  geom_violin()
+diamonds %>%
+  ggplot(aes(price)) +
+  geom_histogram()
+```
+
+Violin plots shows an interesting distribution of the data. Reminds me of vases.
+
+```{r}
+diamonds %>%
+  count(color,cut)%>%
+  ggplot(mapping = aes(x=color, y =cut))+
+  geom_tile(mapping = aes(fill = n))
+```
+
+```{r}
+ggplot(data = diamonds)+
+  geom_point(mapping = aes(x=carat, y=price), alpha = 1 /100)
+
+
+```
+  
+```{r}
+ggplot(data = smaller)+
+  geom_bin2d(mapping = aes(x = carat, y=price))
+
+ggplot(data = smaller)+
+  geom_hex(mapping = aes(x=carat, y=price))
+```
+  
+```{r}
+ggplot(data = smaller, mapping =aes(x= carat, y=price))+
+  geom_boxplot(mapping = aes(group = cut_width(carat, 0.1)))
+```
+  
+  7.5.3.1
+  
+  a. 
+  
+```{r}
+diamonds %>%
+  count(color, cut) %>%
+  group_by(color) %>%
+  mutate(perc = n / sum(n)) %>%
+  ggplot(aes(color, cut, fill = perc)) +
+  geom_tile()
+```
+  5. The plot shows the linear relationship easily with the scatter plot in that case.
+  
